syntax = "proto3";

option csharp_namespace = "ApplicationUserIdentity.API.Proto";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

package ApplicationUserIdentityApi;

service AuthenticationGrpc {
	rpc ChangePassword(ChangePasswordRequestGrpc) returns (ChangePasswordResultGrpc) {}
	rpc ChangePasswordWithoutPass(ChangePasswordGrpcCommand) returns (ChangePasswordResultGrpc) {}
	rpc ForgotPassword(google.protobuf.StringValue) returns (ForgotPasswordResultGrpc) {}
	rpc Login(LoginRequestGrpc) returns (LoginResultGrpc){}
	rpc RegisterFCMToken(RegisterFCMTokenCommandGrpc) returns (RegisterFCMTokenResponseGrpc){}
	rpc UnRegisterFCMToken(google.protobuf.StringValue) returns (UnRegisterFCMTokenResponseGrpc){}
}

message RegisterFCMTokenCommandGrpc{
	google.protobuf.StringValue	 receiverId = 1;
	google.protobuf.StringValue  token = 2;
	google.protobuf.StringValue  platform = 3;
}

message RegisterFCMTokenResponseGrpc{

}
message UnRegisterFCMTokenResponseGrpc{

}

message ForgotPasswordResultGrpc{
	google.protobuf.BoolValue  succeeded = 1;
	google.protobuf.StringValue  message = 2;
	google.protobuf.Timestamp  dateExpired = 3;
}

message LoginRequestGrpc {

	google.protobuf.StringValue	 userName = 1;
	google.protobuf.StringValue  password = 2;
}

message ChangePasswordRequestGrpc{
	google.protobuf.StringValue	 oldPassword = 1;
	google.protobuf.StringValue  newPassword = 2;
	google.protobuf.StringValue  confirmPassword = 3;
	google.protobuf.Int32Value  userId = 4;
}

message ChangePasswordResultGrpc{
	google.protobuf.BoolValue	 succeeded = 1;
	google.protobuf.StringValue message = 2;
}

message ChangePasswordGrpcCommand{
	google.protobuf.StringValue	 oldPassword = 1;
	google.protobuf.StringValue  newPassword = 2;
	google.protobuf.StringValue  confirmPassword = 3;
	google.protobuf.StringValue  userName = 4;
}

message LoginResultGrpc {
	google.protobuf.StringValue token = 1;
	bool succeeded = 2;
	google.protobuf.StringValue message = 3;
}
